--- a/features/categories-impl/src/main/res/values/strings.xml
+++ b/features/categories-impl/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+  <string name="category_title">%s\n(%d)</string>
+
   <string name="categories_add_new_title">Новая категория</string>
   <string name="categories_add_new_ready">ГОТОВО</string>
 </resources>
