rewrite categories to controller and widgets

--- a/features/categories/src/main/res/values/strings.xml
+++ b/features/categories/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-  <string name="category_title">%s\n(%d)</string>
+  <string name="categories_title">%s\n(%d)</string>
 
   <string name="categories_add_new_title">Новая категория</string>
   <string name="categories_add_new_ready">ГОТОВО</string>
